--- a/Sweet/Info.plist
+++ b/Sweet/Info.plist
@@ -19,9 +19,29 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>89</string>
+	<string>163</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>请允许“讲真“获取你的相机权限。
+        
+        若不允许，你将无法拍摄照片或视频。</string>
+	<key>NSContactsUsageDescription</key>
+	<string>你的通讯录联系人将被上传到“讲真”服务器，以便你们快速的找到彼此，掌握好友的最新动态，“匿名投票”给好友。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请允许“讲真“获取你的麦克风权限。
+        
+        若不允许，你将无法在拍摄视频时录入声音。</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>需要加入你的相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许“讲真“获取你的相册权限。
+        
+        若不允许，你将无法使用系统照片，或将内容保存到系统相册。</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
