--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,7 @@ disabled_rules:
 line_length: 120
 excluded:
   - Pods
+  - Sweet/Messenger/Protos
 identifier_name:
   excluded: # excluded via string array
     - id
