--- a/Sweet/Sweet Dev-Info.plist
+++ b/Sweet/Sweet Dev-Info.plist
@@ -40,6 +40,16 @@
 				<string>tencent1106459659</string>
 			</array>
 		</dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string>wb</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>wb3363635970</string>
+            </array>
+        </dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>5570</string>
@@ -47,6 +57,10 @@
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+        <string>sinaweibohd</string>
+        <string>sinaweibo</string>
+        <string>weibosdk</string>
+        <string>weibosdk2.5</string>
 		<string>mqqwpa</string>
 		<string>mqqopensdkapiV3</string>
 		<string>wtloginmqq2</string>
